[package]
name = "staking-nft-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.8.0"
solana-sdk = "1.8.0"
clap = "2.33.3"
serde_json = "1.0"
serde = "1.0"
borsh = "0.9.0"
borsh-derive = "0.9.0"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"
spl-token-metadata = "0.0.1"